syntax  = "proto3";

package tutorial;

option java_multiple_files = true;
option java_package = "com.beraldo.protos";
option java_outer_classname = "AddressBookProtos";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  optional string email = 3;

  enum PhoneType {
    UNSPECIFIED = 0; // default value for enums
    MOBILE = 1;
    HOME = 2;
    WORK = 3;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  PhoneNumber emergency_phone = 5;
}

message AddressBook {
  repeated Person people = 1;
}